welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:55: error: not found: value getHauteurMonde
  T(getHauteurMonde - 1) = getCouleurSol()
    ^